# Formacao-python-backend

./: README.md  pyproject.toml
07 - Banco de dados/: 01_conexao.py  MEU_BANCO.db
11 - Desenvolvimento de APIs com Flask/dio_bank/: pyproject.toml
11 - Desenvolvimento de APIs com Flask/dio_bank/instance/: blog.sqlite
11 - Desenvolvimento de APIs com Flask/dio_bank/migrations/versions/: 20ed86b422a1_add_role_table.py  5207df4533eb_initial_migration.py  c84409002821_initial_migration.py  d3aaa1e992e4_add_passwords_field.py
11 - Desenvolvimento de APIs com Flask/dio_bank/src/: app.py  utils.py
11 - Desenvolvimento de APIs com Flask/dio_bank/src/controllers/: auth.py  role.py  user.py
11 - Desenvolvimento de APIs com Flask/dio_bank/tests/: test_utils.py
11 - Desenvolvimento de APIs com Flask/dio_bank/tests/integration/: conftest.py
11 - Desenvolvimento de APIs com Flask/dio_bank/tests/integration/controllers/: test_user.py
12 - Desenvolvimento fullstack com Django/mysite/: db.sqlite3  pyproject.toml
12 - Desenvolvimento fullstack com Django/mysite/mysite/: settings.py
12 - Desenvolvimento fullstack com Django/mysite/polls/: models.py
12 - Desenvolvimento fullstack com Django/mysite/polls/migrations/: 0001_initial.py  0002_question_active.py  0003_question_x.py
13 - APIs Assincronas com FastAPI/dio-blog/: main.py  pyproject.toml
Desafios/FiltrandoDadosComPython/: FiltragemDeClientes.py  FiltragemProdutosEstoque.py  FiltragemTransacoes.py
Desafios/FormatandoDadosComPython/: ConversaoTemperatura  ExtracaoEmail.py  TransformacaoDatas
