[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = ["Tremendim <luisfernandobeloti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "*"
flask-sqlalchemy = "*"
flask-jwt-extended = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
