[tool.poetry]
name = "12 - desenvolvimento fullstack com django"
version = "0.1.0"
description = ""
authors = ["Tremendim <luisfernandobeloti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "*"


[tool.poetry.group.dev.dependencies]
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
